<resources>
    <string name="app_name">TungKinhOnline</string>
    <string name="text_rank">Xếp hạng</string>
    <string name="text_number">STT</string>
    <string name="text_username">Tài khoản</string>
    <string name="text_count">Số lần gõ mõ</string>
    <string name="text_sign_in">Đăng nhập</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_remember">Nhớ tài khoản</string>
    <string name="text_sign_up">Đăng ký</string>
    <string name="text_re_password">Nhập lại mật khẩu</string>
    <string name="text_log_out">Đăng xuất</string>
    <string name="text_question_out">Bạn chưa thành Phật, bạn có muốn tiếp tục Tu ko?</string>
    <string name="text_down_the_mountain">Xuống núi</string>
    <string name="text_continue_practicing">Tu tiếp</string>
    <string name="text_username_or_password_incorrect">Tài khoản hoặc Mật khẩu không chính xác!</string>
    <string name="text_cannot_be_left_blank">không được để trống</string>
    <string name="text_user_exists">Người dùng tồn tại</string>
    <string name="text_password_do_not_match">Mật khẩu không trùng khớp</string>
    <string name="text_content_logout">Đăng xuất sẽ mất hết điểm</string>
    <string name="text_accept">Đồng ý</string>
    <string name="text_deny">Ở lại</string>
    <string name="text_tutorial">Hướng dẫn</string>
    <string name="text_my_point">Điểm: </string>
    <string name="text_daily_point">Hằng ngày: </string>
    <string name="text_out_of_point">Bạn đã hết điểm hằng ngày</string>
    <string name="text_feature_developing">Tính năng đang phát triển</string>
    <string name="text_tutorial_content">Mỗi ngày bạn nhận được 20 điểm, bạn sẽ dùng điểm đó để gõ mõ, số điểm gõ mõ bạn có được sẽ được xếp hạng:\n\n100 điểm: Đồng\n1000 điểm: Bạc\n5000 điểm: Vàng\n10000 điểm: Bạch kim\n20000 điểm: Kim cương\n30000 điểm : Tinh anh\n50000 điểm: Cao thủ\n70000 điểm: Đại cao thủ\n100000 điểm: Thách đấu\n500000 điểm: Chiến tướng\n1000000 điểm: Tinh linh ánh sáng\n\nMỗi lần xem quảng cáo bạn sẽ nhận được 100 điểm, mỗi lần click quảng cáo bạn sẽ nhận được 200 điểm.</string>
    <string name="text_not_showing_today">không hiển thị ngày hôm nay</string>
    <string name="text_rank_bronze">Đ</string>
    <string name="text_rank_silver">B</string>
    <string name="text_rank_gold">V</string>
    <string name="text_rank_platinum">BK</string>
    <string name="text_rank_diamond">KC</string>
    <string name="text_rank_veteran">TA</string>
    <string name="text_rank_master">CT</string>
    <string name="text_rank_fighter">ĐCT</string>
    <string name="text_rank_gage">TĐ</string>
    <string name="text_rank_war_general">CHT</string>
    <string name="text_rank_light_of_veda">TLAS</string>
    <string name="text_un_rank">0 Hạng</string>
    <string name="text_no_ads">Quảng cáo sẽ có sau 10s</string>
    <string name="text_load_ad_fail">Không tải được quảng cáo có thưởng</string>
    <string name="text_select_music">Chọn nhạc</string>
    <string name="text_no_whitespace_allowed">Không được chứa khoảng trắng</string>
    <string name="text_no_vietnamese_accent_allowed">Không được chứa dấu: huyền sắc hỏi ngã nặng</string>
</resources>